practice, people content

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                     <a href="projects/reardon-street.html">
                         <h2>Reardon Street</h2>
                     </a>
-                    <h3>Education</h3>
+                    <h3>Residential</h3>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                     <a href="projects/chimney-terrace.html">
                         <h2>Chimney Terrace</h2>
                     </a>
-                    <h3>Education</h3>
+                    <h3>Residential</h3>
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
                     <a href="projects/ossory.html">
                         <h2>Ossory</h2>
                     </a>
-                    <h3>Education</h3>
+                    <h3>Residential / Industrial</h3>
                 </div>
             </div>
 
@@ -115,7 +115,7 @@
                     <a href="projects/america-square.html">
                         <h2>America Square</h2>
                     </a>
-                    <h3>Education</h3>
+                    <h3>Hospitality</h3>
                 </div>
             </div>
 
