--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                     <div class="map">
                         <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
                             target="_blank">
-                            <img src="img/LocationMap_3000x2000_Grey.jpg" alt=""></a>
+                            <img src="img/LocationMap_3000x2000.jpg" alt=""></a>
                     </div>
                     </a>
                     <footer>
@@ -66,7 +66,7 @@
                                     <h2>Architects<br>in Practice</h2>
                                     <h3>1 Green Bank Studio</h3>
                                     <h3>London, E1W</h3>
-                                    <h3>+44 (0)20 7XX XXXX</h3>
+                                    <h3><a href="tel:+442081507255">+44 (0)208 150 7255</a></h3>
                                 </div>
 
                                 <div class="footer-registered">
@@ -80,19 +80,19 @@
 
                                 <div class="contact-social-container">
                                     <div class="contact-email">
-                                        <a href="#">
+                                        <a href="mailto:hello@architectsinpractice.com">
                                             <h3>hello@architectsinpractice.com</h3>
                                         </a>
-                                        <a href="#">
+                                        <a href="mailto:press@architectsinpractice.com">
                                             <h3>press@architectsinpractice.com</h3>
                                         </a>
                                     </div>
 
                                     <div class="contact-web">
-                                        <a href="#">
+                                        <a href="https://www.instagram.com/architectsinpractice/" target="_blank">
                                             <h3>@architectsinpractice</h3>
                                         </a>
-                                        <a href="#">
+                                        <a href="http://architectsinpractice.com/" target="_blank">
                                             <h3>architectsinpractice.com</h3>
                                         </a>
                                     </div>
