--- a/people.html
+++ b/people.html
@@ -53,23 +53,33 @@
 
             <div class="person-block mb-sm-5">
                 <div class="person-img">
-                    <img src="img/Rectangle-Copy-4.png" alt="">
+                    <img src="img/IG_ProfilePhoto.JPG" alt="">
                 </div>
                 <div class="person-info">
                     <h2 class="person-name">Ian Givin</h2>
-                    <h2 class="person-title">Director</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur dignissimos nulla
-                        provident corporis quos incidunt ipsum voluptate repellendus veniam, ducimus fuga animi nesciunt
-                        autem aliquam necessitatibus! Distinctio eveniet vel temporibus impedit odit. Maiores deserunt
-                        quibusdam odio fuga provident, a ipsum libero esse ab laborum aperiam nobis earum eius animi
-                        cupiditate. Et nostrum doloremque non soluta maiores sint quis quae alias.
+                    <h2 class="person-title">Director<br>BA (Hons), Dip Arch, RIBA, ARB<br>UK</h2>
+                    <p>Ian is the founding Director of ARCHITECTS IN PRACTICE, having established the practice following
+                        extensive experience working for prominent London-based, award winning practices such as CGL and
+                        Stirling Prize winner, dRMM.
                         <br><br>
-                        Voluptatem dolore perspiciatis, omnis cum aliquam sunt numquam! Eaque atque numquam enim, ex
-                        nulla nobis quas
-                        deserunt ea quam amet asperiores vel cum m.</p>
+                        Having completed his under-graduate studies at the Manchester School of Architecture Ian went on
+                        to complete his post-graduate studies at the University of East London, where his work was
+                        awarded by the RIBA, before gaining professional qualification from the RIBA North West.
+                        <br><br>
+                        Throughout his professional career Ian has amassed over 15 years’ experience in the design and
+                        delivery of major works concentrated around ambitious residential, education, mixed-use and
+                        regeneration schemes across the UK. Ian’s strengths lie in his creative eye – which transcends
+                        into the buildings we design, his self-drive, his meticulous attention to detail and the
+                        management of complex production information. As the Founding Director of ARCHITECTS IN
+                        PRACTICE, Ian manages the strategic development and oversees the design, production and delivery
+                        of all projects.
+                        <br><br>
+                        Ian is a Northerner by birth, a Londoner by choice, an Architect by trade, a football and
+                        cycling enthusiast by default, and a record collector by instinct.
+                    </p>
                 </div>
             </div>
-            <div class="person-block mb-sm-5">
+            <!-- <div class="person-block mb-sm-5">
                 <div class="person-img">
                     <img src="img/Rectangle-Copy-5.png" alt="">
                 </div>
@@ -86,7 +96,7 @@
                         nulla nobis quas
                         deserunt ea quam amet asperiores vel cum m.</p>
                 </div>
-            </div>
+            </div> -->
 
 
 
