scroll down practice

--- a/practice.html
+++ b/practice.html
@@ -23,7 +23,7 @@
             </a>
 
             <div class="menu-toggle" id="menu-toggle">
-                <img src="img/open-white.svg" alt="">
+                <img src="img/open-grey.svg" alt="">
             </div>
 
             <nav>
@@ -54,7 +54,7 @@
             <!-- <div class="practice-showcase-overlay"></div> -->
         </div>
 
-        <div class="container">
+        <div class="container" id="container-single">
 
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 pb-lg-5 practice-desc">
