--- a/practice.html
+++ b/practice.html
@@ -58,76 +58,91 @@
 
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 pb-lg-5 practice-desc">
-                    <h3 class="pb-lg-4">About Us</h3>
-                    <p>We are ARCHITECTS IN PRACTICE – a London-based design studio renowned for creating innovative,
-                        playful and environmentally conscious buildings. We are diverse practitioners who are passionate
-                        about architecture and how it can positively shape the built-environment.
-                        <br><br>
-                        We are progressive, ambitious and constantly evolving, and we work with like-minded clients to
-                        promote and execute ideas that make a positive impact on the buildings and spaces we work with.
-                        This, we believe, comes about through client collaboration, building innovation and
-                        environmental awareness.
-                        <br><br>
-                        We take on complex briefs and refine them to create simple yet elegant architecture, and all of
-                        our projects are rooted in extensive research and designed for measurable impact.
-                    </p>
+                    <h3 class="pb-lg-3">About Us</h3>
+                    <div>
+                        <p>We are ARCHITECTS IN PRACTICE – a London-based design studio renowned for creating
+                            innovative,
+                            playful and environmentally conscious buildings. We are diverse practitioners who are
+                            passionate
+                            about architecture and how it can positively shape the built-environment.</p>
+                        <p> We are progressive, ambitious and constantly evolving, and we work with like-minded clients
+                            to
+                            promote and execute ideas that make a positive impact on the buildings and spaces we work
+                            with.
+                            This, we believe, comes about through client collaboration, building innovation and
+                            environmental awareness.</p>
+                        <p>We take on complex briefs and refine them to create simple yet elegant architecture, and all
+                            of
+                            our projects are rooted in extensive research and designed for measurable impact.</p>
+                    </div>
                 </div>
                 <div class="col-lg-6 pl-lg-5 pb-lg-5 practice-desc">
-                    <h3 class="pb-lg-4">Why Us?</h3>
-                    <p>We are lovers of all things architectural.
-                        <br><br>
-                        We love our work, have fun doing it and are proud of what we do. We have an incredibly talented,
-                        diverse and resourceful team who are passionate about what we build as well as how we build. We
-                        promote environmental awareness while pushing the boundaries with building innovation.
-                        <br><br>
-                        We believe outstanding environmentally driven architecture is derived from a collaborative
-                        process, which we engage in from the outset. Our design approach is to use physical models,
-                        workshops and presentations to communicate ideas in an informal manner, whether this being with
-                        stakeholders, residents or local authorities. Yet our creativity is not limited to traditional
-                        analogue processes, but we harness the latest technology to create immersive experiences using
-                        virtual and augmented reality as a way of developing and communicating our designs.
-                        <br><br>
-                        We are always seeking new and exciting opportunities, therefore if you feel we are the right
-                        practice for you please do get in touch.
-                        <br><br>
-                        +44 (0)208 150 7255<br>
-                        hello@architectsinpractice.com
-                    </p>
+                    <h3 class="pb-lg-3">Why Us?</h3>
+                    <div>
+                        <p>We are lovers of all things architectural.</p>
+                        <p>We love our work, have fun doing it and are proud of what we do. We have an incredibly
+                            talented,
+                            diverse and resourceful team who are passionate about what we build as well as how we build.
+                            We
+                            promote environmental awareness while pushing the boundaries with building innovation.</p>
+                        <p>We believe outstanding environmentally driven architecture is derived from a collaborative
+                            process, which we engage in from the outset. Our design approach is to use physical models,
+                            workshops and presentations to communicate ideas in an informal manner, whether this being
+                            with
+                            stakeholders, residents or local authorities. Yet our creativity is not limited to
+                            traditional
+                            analogue processes, but we harness the latest technology to create immersive experiences
+                            using
+                            virtual and augmented reality as a way of developing and communicating our designs.</p>
+                        <p> We are always seeking new and exciting opportunities, therefore if you feel we are the right
+                            practice for you please do get in touch.</p>
+                        <p>+44 (0)208 150 7255<br>
+                            hello@architectsinpractice.com</p>
+                    </div>
                 </div>
             </div>
 
             <h1 class="process my-5">Process</h1>
 
-            <div class="row">
-                <div class="col-lg-6 pr-lg-5 practice-desc">
-                    <h3 class="pb-lg-4">Analogue</h3>
-                    <p>Making physical models is a fundamental part of our design process.
-                        <br><br>
-                        We use physical models from the outset to convey qualities of the project that other methods
-                        cannot. We also find them to be an effective tool to communicate ideas with clients, planning
-                        authorities and project teams.
-                        <br><br>
-                        The process alone often brings out new design ideas for discussion, and we encourage all
-                        projects to be developed in this way, from simple concepts to presentation models, we find this
-                        approach encourages collaboration throughout, something we believe benefits the project as a
-                        whole.
-                    </p>
+            <div class="row practice-row">
+                <div class="col-lg-7 practice-img">
+                    <img src="img/practice-process.jpg" alt="">
                 </div>
-                <div class="col-lg-6 pl-lg-5 practice-desc">
-                    <h3 class="pb-lg-4">Immersive Design</h3>
-                    <p>We integrate virtual and augmented reality into our daily BIM workflow.
-                        <br><br>
-                        With the use of cutting-edge virtual tools, we are able to delve into fully immersive
-                        environments to explore every area and aspect of a project. We find this to be an immensely
-                        powerful tool, one that can provide deeper understanding of the project and can offer greater
-                        efficiency with decision making.
-                        <br><br>
-                        Using real-time visualisation, we are able to gain consensus and move forward quickly with
-                        important design decisions.
-                    </p>
+                <div class="col-lg-5 practice-desc">
+                    <h3 class="pb-lg-3">Analogue</h3>
+                    <div>
+                        <p>Making physical models is a fundamental part of our design process.</p>
+                        <p>We use physical models from the outset to convey qualities of the project that other methods
+                            cannot. We also find them to be an effective tool to communicate ideas with clients,
+                            planning
+                            authorities and project teams.</p>
+                        <p>The process alone often brings out new design ideas for discussion, and we encourage all
+                            projects to be developed in this way, from simple concepts to presentation models, we find
+                            this
+                            approach encourages collaboration throughout, something we believe benefits the project as a
+                            whole.</p>
+                    </div>
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-lg-7 order-lg-last practice-img">
+                    <img src="img/practice-analogue.jpg" alt="">
+                </div>
+                <div class="col-lg-5 practice-desc">
+                    <h3 class="pb-lg-3">Immersive Design</h3>
+                    <div>
+                        <p>We integrate virtual and augmented reality into our daily BIM workflow.</p>
+                        <p>With the use of cutting-edge virtual tools, we are able to delve into fully immersive
+                            environments to explore every area and aspect of a project. We find this to be an immensely
+                            powerful tool, one that can provide deeper understanding of the project and can offer
+                            greater
+                            efficiency with decision making.</p>
+                        <p>Using real-time visualisation, we are able to gain consensus and move forward quickly with
+                            important design decisions.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <footer>
