--- a/people.html
+++ b/people.html
@@ -53,53 +53,53 @@
 
             <div class="person-block mb-sm-5">
                 <div class="person-img">
-                    <img src="img/IG_ProfilePhoto.JPG" alt="">
-                </div>
-                <div class="person-info">
-                    <h2 class="person-name">Ian Givin</h2>
-                    <h2 class="person-title">Director<br>BA (Hons), Dip Arch, RIBA, ARB<br>UK</h2>
-                    <p>Ian is the founding Director of ARCHITECTS IN PRACTICE, having established the practice following
-                        extensive experience working for prominent London-based, award winning practices such as CGL and
-                        Stirling Prize winner, dRMM.
-                        <br><br>
-                        Having completed his under-graduate studies at the Manchester School of Architecture Ian went on
-                        to complete his post-graduate studies at the University of East London, where his work was
-                        awarded by the RIBA, before gaining professional qualification from the RIBA North West.
-                        <br><br>
-                        Throughout his professional career Ian has amassed over 15 years’ experience in the design and
-                        delivery of major works concentrated around ambitious residential, education, mixed-use and
-                        regeneration schemes across the UK. Ian’s strengths lie in his creative eye – which transcends
-                        into the buildings we design, his self-drive, his meticulous attention to detail and the
-                        management of complex production information. As the Founding Director of ARCHITECTS IN
-                        PRACTICE, Ian manages the strategic development and oversees the design, production and delivery
-                        of all projects.
-                        <br><br>
-                        Ian is a Northerner by birth, a Londoner by choice, an Architect by trade, a football and
-                        cycling enthusiast by default, and a record collector by instinct.
-                    </p>
-                </div>
-            </div>
-            <!-- <div class="person-block mb-sm-5">
-                <div class="person-img">
-                    <img src="img/Rectangle-Copy-5.png" alt="">
+                    <img src="img/ProfilePhoto_IG_3750x2500.jpg" alt="">
                 </div>
                 <div class="person-info">
                     <h2 class="person-name">Ian Givin</h2>
                     <h2 class="person-title">Director</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur dignissimos nulla
-                        provident corporis quos incidunt ipsum voluptate repellendus veniam, ducimus fuga animi nesciunt
-                        autem aliquam necessitatibus! Distinctio eveniet vel temporibus impedit odit. Maiores deserunt
-                        quibusdam odio fuga provident, a ipsum libero esse ab laborum aperiam nobis earum eius animi
-                        cupiditate. Et nostrum doloremque non soluta maiores sint quis quae alias.
-                        <br><br>
-                        Voluptatem dolore perspiciatis, omnis cum aliquam sunt numquam! Eaque atque numquam enim, ex
-                        nulla nobis quas
-                        deserunt ea quam amet asperiores vel cum m.</p>
+                    <h3 class="person-qualification">BA (Hons), Dip Arch, RIBA, ARB<br>UK</h3>
+                    <div class="person-detail">
+                        <p>Ian is the founding Director of ARCHITECTS IN PRACTICE, having
+                            established
+                            the practice following
+                            extensive experience working for prominent London-based, award winning practices such as CGL
+                            and
+                            Stirling Prize winner, dRMM.
+                        </p>
+                        <p>
+                            Having completed his under-graduate studies at the Manchester School of Architecture Ian
+                            went on
+                            to complete his post-graduate studies at the University of East London, where his work was
+                            awarded by the RIBA, before gaining professional qualification from the RIBA North West.
+                        </p>
+                    </div>
+                    <div class="read-more">
+                        <div class="collapse person-detail" id="collapse-readmore">
+                            <p>Throughout his professional career Ian has amassed over 15 years’ experience in the
+                                design and delivery of major works concentrated around ambitious residential, education,
+                                mixed-use and regeneration schemes across the UK. Ian’s strengths lie in his creative
+                                eye – which transcends into the buildings we design, his self-drive, his meticulous
+                                attention to detail and the management of complex production information. As the
+                                Founding Director of ARCHITECTS IN PRACTICE, Ian manages the strategic development and
+                                oversees the design, production and delivery of all projects.
+                            </p>
+                            <p>
+                                Ian is a Northerner by birth, a Londoner by choice, an Architect by trade, a football
+                                and cycling enthusiast by default, and a record collector by instinct.
+                            </p>
+
+                            </p>
+                        </div>
+                        <p class="collapsed" data-toggle="collapse" data-target="#collapse-readmore" id="read-more">Read
+                            more</p>
+
+
+
+                    </div>
+
                 </div>
-            </div> -->
-
-
-
+            </div>
         </div>
 
         <footer>
@@ -176,6 +176,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+
     <script>
         //get the current year of the copyright
         $('#year').text(new Date().getFullYear());
