--- a/people.html
+++ b/people.html
@@ -67,37 +67,40 @@
                             and
                             Stirling Prize winner, dRMM.
                         </p>
-                        <p>
+                        <p class="remove-mobile">
                             Having completed his under-graduate studies at the Manchester School of Architecture Ian
-                            went on
-                            to complete his post-graduate studies at the University of East London, where his work was
+                            went on to complete his post-graduate studies at the University of East London, where his
+                            work was
                             awarded by the RIBA, before gaining professional qualification from the RIBA North West.
                         </p>
-                    </div>
-                    <div class="read-more">
                         <div class="collapse person-detail" id="collapse-readmore">
+                            <p class="remove-desktop">
+                                Having completed his under-graduate studies at the Manchester School of Architecture Ian
+                                went on to complete his post-graduate studies at the University of East London, where
+                                his
+                                work was
+                                awarded by the RIBA, before gaining professional qualification from the RIBA North West.
+                            </p>
                             <p>Throughout his professional career Ian has amassed over 15 years’ experience in the
-                                design and delivery of major works concentrated around ambitious residential, education,
-                                mixed-use and regeneration schemes across the UK. Ian’s strengths lie in his creative
+                                design and delivery of major works concentrated around ambitious residential,
+                                education,
+                                mixed-use and regeneration schemes across the UK. Ian’s strengths lie in his
+                                creative
                                 eye – which transcends into the buildings we design, his self-drive, his meticulous
                                 attention to detail and the management of complex production information. As the
-                                Founding Director of ARCHITECTS IN PRACTICE, Ian manages the strategic development and
+                                Founding Director of ARCHITECTS IN PRACTICE, Ian manages the strategic development
+                                and
                                 oversees the design, production and delivery of all projects.
                             </p>
                             <p>
-                                Ian is a Northerner by birth, a Londoner by choice, an Architect by trade, a football
-                                and cycling enthusiast by default, and a record collector by instinct.
-                            </p>
-
+                                Ian is a Northerner by birth, a Londoner by choice, an Architect by trade, a
+                                football and cycling enthusiast by default, and a record collector by instinct.
                             </p>
                         </div>
-                        <p class="collapsed" data-toggle="collapse" data-target="#collapse-readmore" id="read-more">Read
-                            more</p>
-
-
+                        <p class="collapsed" data-toggle="collapse" data-target="#collapse-readmore" id="read-more">
+                            Read more</p>
 
                     </div>
-
                 </div>
             </div>
         </div>
@@ -108,9 +111,12 @@
 
                     <div class="contact-address">
                         <h2>Architects<br>in Practice</h2>
-                        <h3>1 Green Bank Studio</h3>
-                        <h3>London, E1W</h3>
-                        <h3>+44 (0)20 7XX XXXX</h3>
+                        <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
+                            target="_blank">
+                            <h3>1 Green Bank Studio</h3>
+                            <h3>London, E1W 2PA</h3>
+                        </a>
+                        <h3><a href="tel:+442081507255">+44 (0)208 150 7255</a></h3>
                     </div>
 
                     <div class="footer-registered">
@@ -124,19 +130,19 @@
 
                     <div class="contact-social-container">
                         <div class="contact-email">
-                            <a href="#">
+                            <a href="mailto:hello@architectsinpractice.com">
                                 <h3>hello@architectsinpractice.com</h3>
                             </a>
-                            <a href="#">
+                            <a href="mailto:press@architectsinpractice.com">
                                 <h3>press@architectsinpractice.com</h3>
                             </a>
                         </div>
 
                         <div class="contact-web">
-                            <a href="#">
+                            <a href="https://www.instagram.com/architectsinpractice/" target="_blank">
                                 <h3>@architectsinpractice</h3>
                             </a>
-                            <a href="#">
+                            <a href="http://architectsinpractice.com/" target="_blank">
                                 <h3>architectsinpractice.com</h3>
                             </a>
                         </div>
@@ -148,9 +154,9 @@
 
 
                     <div class="footer-data">
-                        <p>We are committed to collecting and using personal data</p>
-                        <p>responsibly and securely. If you would like to know more</p>
-                        <p>about our Privacy Policy, please do get in touch.</p>
+                        <p>We are committed to collecting personal data responsibly</p>
+                        <p>If you would like to know more about our Privacy Policy,</p>
+                        <p>please do get in touch.</p>
                     </div>
 
                     <div class="footer-registered-mobile">
