--- a/projects/america-square.html
+++ b/projects/america-square.html
@@ -204,9 +204,12 @@
 
                     <div class="contact-address">
                         <h2>Architects<br>in Practice</h2>
-                        <h3>1 Green Bank Studio</h3>
-                        <h3>London, E1W</h3>
-                        <h3>+44 (0)20 7XX XXXX</h3>
+                        <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
+                            target="_blank">
+                            <h3>1 Green Bank Studio</h3>
+                            <h3>London, E1W 2PA</h3>
+                        </a>
+                        <h3><a href="tel:+442081507255">+44 (0)208 150 7255</a></h3>
                     </div>
 
                     <div class="footer-registered">
@@ -220,19 +223,19 @@
 
                     <div class="contact-social-container">
                         <div class="contact-email">
-                            <a href="#">
+                            <a href="mailto:hello@architectsinpractice.com">
                                 <h3>hello@architectsinpractice.com</h3>
                             </a>
-                            <a href="#">
+                            <a href="mailto:press@architectsinpractice.com">
                                 <h3>press@architectsinpractice.com</h3>
                             </a>
                         </div>
 
                         <div class="contact-web">
-                            <a href="#">
+                            <a href="https://www.instagram.com/architectsinpractice/" target="_blank">
                                 <h3>@architectsinpractice</h3>
                             </a>
-                            <a href="#">
+                            <a href="http://architectsinpractice.com/" target="_blank">
                                 <h3>architectsinpractice.com</h3>
                             </a>
                         </div>
@@ -244,9 +247,9 @@
 
 
                     <div class="footer-data">
-                        <p>We are committed to collecting and using personal data</p>
-                        <p>responsibly and securely. If you would like to know more</p>
-                        <p>about our Privacy Policy, please do get in touch.</p>
+                        <p>We are committed to collecting personal data responsibly</p>
+                        <p>If you would like to know more about our Privacy Policy,</p>
+                        <p>please do get in touch.</p>
                     </div>
 
                     <div class="footer-registered-mobile">
