--- a/projects/reardon-street.html
+++ b/projects/reardon-street.html
@@ -121,13 +121,13 @@
             <div class="single-auto-img img-mb">
                 <img src="../img/1_ReardonStreet/Project_Sequence/ReardonSt_2.jpg" alt="">
             </div>
-            <div class="single-square-img img-mb">
+            <div class="single-full-img img-mb">
                 <img src="../img/1_ReardonStreet/Project_Sequence/ReardonSt_3.jpg" alt="">
             </div>
-            <div class="single-full-img img-mb">
+            <div class="single-square-img img-mb">
                 <img src="../img/1_ReardonStreet/Project_Sequence/ReardonSt_4.jpg" alt="">
             </div>
-            <div class="single-full-img img-mb">
+            <div class="single-square-img img-mb">
                 <img src="../img/1_ReardonStreet/Project_Sequence/ReardonSt_5.jpg" alt="">
             </div>
             <div class="single-full-img img-mb">
@@ -145,7 +145,7 @@
             <div class="single-full-img img-mb">
                 <img src="../img/1_ReardonStreet/Project_Sequence/ReardonSt_10.jpg" alt="">
             </div>
-            <div class="single-square-img img-mb">
+            <div class="single-full-img img-mb">
                 <img src="../img/1_ReardonStreet/Project_Sequence/ReardonSt_11.jpg" alt="">
             </div>
             <div class="single-full-img img-mb">
@@ -192,7 +192,7 @@
                         <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
                             target="_blank">
                             <h3>1 Green Bank Studio</h3>
-                            <h3>London, E1W 2PA</h3>
+                            <h3>London E1W 2PA</h3>
                         </a>
                         <h3><a href="tel:+442081507255">+44 (0)208 150 7255</a></h3>
                     </div>
@@ -232,7 +232,7 @@
 
 
                     <div class="footer-data">
-                        <p>We are committed to collecting personal data responsibly</p>
+                        <p>We are committed to collecting personal data responsibly.</p>
                         <p>If you would like to know more about our Privacy Policy,</p>
                         <p>please do get in touch.</p>
                     </div>
