--- a/practice.html
+++ b/practice.html
@@ -96,8 +96,12 @@
                             virtual and augmented reality as a way of developing and communicating our designs.</p>
                         <p> We are always seeking new and exciting opportunities, therefore if you feel we are the right
                             practice for you please do get in touch.</p>
-                        <p>+44 (0)208 150 7255<br>
-                            hello@architectsinpractice.com</p>
+                        <a href="tel:+442081507255">
+                            <p>+44 (0)208 150 7255</p>
+                        </a>
+                        <a href="mailto:hello@architectsinpractice.com">
+                            <p>hello@architectsinpractice.com</p>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -106,9 +110,9 @@
 
             <div class="row practice-row">
                 <div class="col-lg-7 practice-img">
-                    <img src="img/practice-process.jpg" alt="">
+                    <img src="img/practice-analogue.jpg" alt="">
                 </div>
-                <div class="col-lg-5 practice-desc">
+                <div class="col-lg-5 practice-desc process-desc">
                     <h3 class="pb-lg-3">Analogue</h3>
                     <div>
                         <p>Making physical models is a fundamental part of our design process.</p>
@@ -127,9 +131,9 @@
 
             <div class="row">
                 <div class="col-lg-7 order-lg-last practice-img">
-                    <img src="img/practice-analogue.jpg" alt="">
+                    <img src="img/practice-emersive.jpg" alt="">
                 </div>
-                <div class="col-lg-5 practice-desc">
+                <div class="col-lg-5 practice-desc process-desc">
                     <h3 class="pb-lg-3">Immersive Design</h3>
                     <div>
                         <p>We integrate virtual and augmented reality into our daily BIM workflow.</p>
@@ -154,7 +158,7 @@
                         <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
                             target="_blank">
                             <h3>1 Green Bank Studio</h3>
-                            <h3>London, E1W 2PA</h3>
+                            <h3>London E1W 2PA</h3>
                         </a>
                         <h3><a href="tel:+442081507255">+44 (0)208 150 7255</a></h3>
                     </div>
@@ -194,7 +198,7 @@
 
 
                     <div class="footer-data">
-                        <p>We are committed to collecting personal data responsibly</p>
+                        <p>We are committed to collecting personal data responsibly.</p>
                         <p>If you would like to know more about our Privacy Policy,</p>
                         <p>please do get in touch.</p>
                     </div>
