--- a/projects/america-square.html
+++ b/projects/america-square.html
@@ -207,7 +207,7 @@
                         <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
                             target="_blank">
                             <h3>1 Green Bank Studio</h3>
-                            <h3>London, E1W 2PA</h3>
+                            <h3>London E1W 2PA</h3>
                         </a>
                         <h3><a href="tel:+442081507255">+44 (0)208 150 7255</a></h3>
                     </div>
@@ -247,7 +247,7 @@
 
 
                     <div class="footer-data">
-                        <p>We are committed to collecting personal data responsibly</p>
+                        <p>We are committed to collecting personal data responsibly.</p>
                         <p>If you would like to know more about our Privacy Policy,</p>
                         <p>please do get in touch.</p>
                     </div>
