--- a/projects/gatehouse-school.html
+++ b/projects/gatehouse-school.html
@@ -102,6 +102,8 @@
                                 <li>Structural Engineer</li>
                                 <li>Services Engineer</li>
                                 <li>Principal Contractor</li>
+                                <li style="color: #fff">blank</li>
+                                <li>Photography</li>
                             </ul>
                         </div>
                         <div class="col-7 col-sm-6">
@@ -120,6 +122,8 @@
                                 <li>Conisbee</li>
                                 <li>IES / Battledore</li>
                                 <li>Phoenix / ARJ</li>
+                                <li style="color: #fff">blank</li>
+                                <li>&copy; Jonathan Banks / Edmund Sumner</li>
                             </ul>
                         </div>
                     </div>
@@ -210,7 +214,7 @@
                         <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
                             target="_blank">
                             <h3>1 Green Bank Studio</h3>
-                            <h3>London, E1W 2PA</h3>
+                            <h3>London E1W 2PA</h3>
                         </a>
                         <h3><a href="tel:+442081507255">+44 (0)208 150 7255</a></h3>
                     </div>
@@ -250,7 +254,7 @@
 
 
                     <div class="footer-data">
-                        <p>We are committed to collecting personal data responsibly</p>
+                        <p>We are committed to collecting personal data responsibly.</p>
                         <p>If you would like to know more about our Privacy Policy,</p>
                         <p>please do get in touch.</p>
                     </div>
