--- a/practice.html
+++ b/practice.html
@@ -57,7 +57,7 @@
         <div class="container" id="container-single">
 
             <div class="row">
-                <div class="col-lg-6 pr-lg-5 pb-lg-5 practice-desc">
+                <div class="col-lg-6 pr-lg-5 pb-sm-5 pb-3 practice-desc">
                     <h3 class="pb-lg-3">About Us</h3>
                     <div>
                         <p>We are ARCHITECTS IN PRACTICE – a London-based design studio renowned for creating
