--- a/projects/america-square.html
+++ b/projects/america-square.html
@@ -121,7 +121,7 @@
                                 <li>Capita Symonds</li>
                                 <li>PSH</li>
                                 <li>Square Metre</li>
-                                <li>Native</li>
+                                <li>&copy; Native</li>
                             </ul>
                         </div>
                     </div>
