--- a/people.html
+++ b/people.html
@@ -55,59 +55,75 @@
                 <div class="person-img">
                     <img src="img/ProfilePhoto_IG_3750x2500.jpg" alt="">
                 </div>
-                <div class="person-info">
-                    <h2 class="person-name">Ian Givin</h2>
-                    <h2 class="person-title">Director</h2>
-                    <h3 class="person-qualification">BA (Hons), Dip Arch, RIBA, ARB<br>UK</h3>
-                    <div class="person-detail">
-                        <p>Ian is the founding Director of ARCHITECTS IN PRACTICE, having
-                            established
-                            the practice following
-                            extensive experience working for prominent London-based, award winning practices such as CGL
-                            and
-                            Stirling Prize winner, dRMM.
-                        </p>
-                        <p class="remove-mobile">
-                            Having completed his under-graduate studies at the Manchester School of Architecture Ian
-                            went on to complete his post-graduate studies at the University of East London, where his
-                            work was
-                            awarded by the RIBA, before gaining professional qualification from the RIBA North West.
-                        </p>
-                        <div class="collapse person-detail" id="collapse-readmore">
-                            <p class="remove-desktop">
-                                Having completed his under-graduate studies at the Manchester School of Architecture Ian
-                                went on to complete his post-graduate studies at the University of East London, where
-                                his
-                                work was
-                                awarded by the RIBA, before gaining professional qualification from the RIBA North West.
-                            </p>
-                            <p>Throughout his professional career Ian has amassed over 15 years’ experience in the
-                                design and delivery of major works concentrated around ambitious residential,
-                                education,
-                                mixed-use and regeneration schemes across the UK. Ian’s strengths lie in his
-                                creative
-                                eye – which transcends into the buildings we design, his self-drive, his meticulous
-                                attention to detail and the management of complex production information.
-                            </p>
-                            <p>
-                                As the
-                                Founding Director of ARCHITECTS IN PRACTICE, Ian manages the strategic development
+                <div class="person-info-wrap">
+                    <div class="person-info">
+                        <h2 class="person-name">Ian Givin</h2>
+                        <h2 class="person-title">Director</h2>
+                        <h3 class="person-qualification">BA (Hons), Dip Arch, RIBA, ARB<br>UK</h3>
+                        <div class="person-detail">
+                            <p>Ian is the founding Director of ARCHITECTS IN PRACTICE, having
+                                established
+                                the practice following
+                                extensive experience working for prominent London-based, award winning practices such as
+                                CGL
                                 and
-                                oversees the design, production and delivery of all projects.
+                                Stirling Prize winner, dRMM.
                             </p>
-                            <p>
-                                Ian is a Northerner by birth, a Londoner by choice, an Architect by trade, a
-                                football and cycling enthusiast by default, and a record collector by instinct.
-                            </p>
-                        </div>
-                        <p class="collapsed" data-toggle="collapse" data-target="#collapse-readmore" id="read-more">
-                            Read more</p>
 
+                            <div class="collapse person-detail" id="collapse-readmore">
+                                <p>
+                                    Having completed his under-graduate studies at the Manchester School of Architecture
+                                    Ian
+                                    went on to complete his post-graduate studies at the University of East London,
+                                    where
+                                    his
+                                    work was
+                                    awarded by the RIBA, before gaining professional qualification from the RIBA North
+                                    West.
+                                </p>
+                                <p>
+                                    Having completed his under-graduate studies at the Manchester School of Architecture
+                                    Ian
+                                    went on to complete his post-graduate studies at the University of East London,
+                                    where
+                                    his
+                                    work was
+                                    awarded by the RIBA, before gaining professional qualification from the RIBA North
+                                    West.
+                                </p>
+                                <p>Throughout his professional career Ian has amassed over 15 years’ experience in the
+                                    design and delivery of major works concentrated around ambitious residential,
+                                    education,
+                                    mixed-use and regeneration schemes across the UK. Ian’s strengths lie in his
+                                    creative
+                                    eye – which transcends into the buildings we design, his self-drive, his meticulous
+                                    attention to detail and the management of complex production information.
+                                </p>
+                                <p>
+                                    As the
+                                    Founding Director of ARCHITECTS IN PRACTICE, Ian manages the strategic development
+                                    and
+                                    oversees the design, production and delivery of all projects.
+                                </p>
+                                <p>
+                                    Ian is a Northerner by birth, a Londoner by choice, an Architect by trade, a
+                                    football and cycling enthusiast by default, and a record collector by instinct.
+                                </p>
+                            </div>
+
+                            <p class="collapsed mobile-button" data-toggle="collapse" data-target="#collapse-readmore"
+                                id="read-more">
+                                Read more</p>
+
+                        </div>
                     </div>
+
+
+                    <div class="desktop-button" id="read-more">Read more</div>
+
                 </div>
             </div>
         </div>
-
         <footer>
             <div class="footer-container">
                 <div class="contact-info">
