--- a/practice.html
+++ b/practice.html
@@ -94,7 +94,8 @@
                             analogue processes, but we harness the latest technology to create immersive experiences
                             using
                             virtual and augmented reality as a way of developing and communicating our designs.</p>
-                        <p> We are always seeking new and exciting opportunities, therefore if you feel we are the right
+                        <p class="pb-4">We are always seeking new and exciting opportunities, therefore if you feel we
+                            are the right
                             practice for you please do get in touch.</p>
                         <a href="tel:+442081507255">
                             <p>+44 (0)208 150 7255</p>
